<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.algonquinlive.saad0033.hsvcolorpicker.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/colorSwatch"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"
        android:height="200dp"
        android:background="#000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hue"
        android:id="@+id/hueText"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/hueSB"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:max="360"
        android:layout_below="@+id/hueText"
        android:layout_marginBottom="15dp"
        android:background="@drawable/hue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/saturation"
        android:id="@+id/saturationText"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/hueSB"/>
    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/saturationSB"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:max="100"
        android:layout_below="@+id/saturationText"
        android:layout_marginBottom="15dp"
        android:background="@drawable/saturation"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/value"
        android:id="@+id/valueText"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/saturationSB"/>
    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:id="@+id/valueSB"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:max="100"
        android:layout_below="@+id/valueText"
        android:layout_marginBottom="15dp"
        android:background="@drawable/value_lightness"/>

    <TextView
        android:text="@string/initialHue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hueValue"
        android:layout_above="@+id/hueSB"
        android:layout_toEndOf="@+id/hueText"
        android:layout_alignTop="@+id/hueText"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center_vertical|start"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <TextView
        android:text="@string/initialSaturation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/saturationValue"
        android:layout_above="@+id/saturationSB"
        android:layout_toEndOf="@+id/saturationText"
        android:layout_alignTop="@+id/saturationText"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center_vertical|start"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <TextView
        android:text="@string/initialValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/valueValue"
        android:layout_above="@+id/valueSB"
        android:layout_toEndOf="@+id/valueText"
        android:layout_alignTop="@+id/valueText"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:gravity="center_vertical|start"
        android:textSize="18sp"
        android:textColor="@color/black"/>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/valueSB"
        android:fillViewport="false"
        android:measureAllChildren="false">

        <LinearLayout
            android:id="@+id/buttonGroup"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            tools:ignore="ExtraText">

            <Button
                android:id="@+id/blackButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/black"
                tools:ignore="ButtonStyle,RtlHardcoded" />

            <Button
                android:id="@+id/redButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/red"
                tools:ignore="ButtonStyle,RtlHardcoded" />=

            <Button
                android:id="@+id/limeButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/lime"
                tools:ignore="ButtonStyle,RtlHardcoded" />

            <Button
                android:id="@+id/blueButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/blue"
                tools:ignore="ButtonStyle,RtlHardcoded"/>

            <Button
                android:id="@+id/yellowButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/yellow"
                tools:ignore="ButtonStyle,RtlHardcoded"/>

            <Button
                android:id="@+id/cyanButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/cyan"
                tools:ignore="ButtonStyle,RtlHardcoded"/>

            <Button
                android:id="@+id/magentaButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/magenta"
                tools:ignore="ButtonStyle,RtlHardcoded"/>

            <Button
                android:id="@+id/silverButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/silver"
                tools:ignore="ButtonStyle,RtlHardcoded"/>

            <Button
                android:id="@+id/grayButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/gray"
                tools:ignore="ButtonStyle,RtlHardcoded"/>

            <Button
                android:id="@+id/maroonButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/maroon"
                tools:ignore="ButtonStyle,RtlHardcoded"/>

            <Button
                android:id="@+id/oliveButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/olive"
                tools:ignore="ButtonStyle,RtlHardcoded"/>

            <Button
                android:id="@+id/greenButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/green"
                tools:ignore="ButtonStyle,RtlHardcoded"/>

            <Button
                android:id="@+id/purpleButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/purple"
                tools:ignore="ButtonStyle,RtlHardcoded"/>

            <Button
                android:id="@+id/tealButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/teal"
                tools:ignore="ButtonStyle,RtlHardcoded"/>

            <Button
                android:id="@+id/navyButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@color/navy"
                tools:ignore="ButtonStyle,RtlHardcoded"/>
        </LinearLayout>
    </HorizontalScrollView>
</RelativeLayout>
